@@ -169,8 +169,7 @@ command.
 
 Due to licensing restrictions, Yices and Z3 are not installed/enabled
 by default.  Z3 is free for non-commercial applications and can be enabled
-by simply setting the environment variable @{text Z3_NON_COMMERCIAL} to
-@{text yes}.
+by setting Isabelle system option @{text z3_non_commercial} to @{text yes}.
 *}
 
 declare [[ smt_solver = z3 ]]
